kubernetes/maven-registry/archiva-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: archiva-xetusoss-archiva
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"


    #nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  tls:
    - hosts:
        - artifactory.projectdw.de
      secretName: artifactory
  rules:
    - host: artifactory.projectdw.de
      http:
        paths:
          - backend:
              service:
                name: archiva-xetusoss-archiva
                port:
                  number: 80

            path: "/"
            pathType: "ImplementationSpecific"
